@@ -2,7 +2,5 @@ include COPYING
 include ChangeLog
 include NEWS
 include doc/*
-include utils/*
-include yhsm-val/*
-include yubikey-ksm/*
+include man/*
 include examples/*.py
