@@ -26,7 +26,7 @@ validation of virtually unlimited numbers of YubiKey's OTPs.
 If \-\-internal-db is used, the YubiKey secret will be stored inside
 the YubiHSM, and complete validation (including counter management)
 will be done inside the YubiHSM. The internal database is currently
-limited to 1024 entrys.
+limited to 1024 entries.
 
 .SH OPTIONS
 .PP
@@ -50,7 +50,7 @@ key handles to use for decoding OTPs. Examples : "1", "0xabcd"
 base directory for AEADs (default: /var/cache/yubikey-ksm/aeads)
 .TP
 \fB\-\-internal-db\fR
-add entrys to YubiHSM internal database, rather than creating AEAD files
+add entries to YubiHSM internal database, rather than creating AEAD files
 .TP
 \fB\-\-random-nonce\fR
 use random nonce generated from YubiHSM
