@@ -48,14 +48,35 @@ setup(
     url='https://github.com/Yubico/python-pyhsm',
     license='BSD 2 clause',
     packages=find_packages(exclude=['test']),
+    entry_points={
+        'console_scripts': [
+            # tools
+            'yhsm-daemon = pyhsm.stick_daemon:main [daemon]',
+            'yhsm-decrypt-aead = pyhsm.tools.decrypt_aead:main',
+            'yhsm-generate-keys = pyhsm.tools.generate_keys:main',
+            'yhsm-keystore-unlock = pyhsm.tools.keystore_unlock:main',
+            'yhsm-linux-add-entropy = pyhsm.tools.linux_add_entropy:main',
+            # ksm
+            'yhsm-yubikey-ksm = pyhsm.ksm.yubikey_ksm:main [daemon]',
+            'yhsm-import-keys = pyhsm.ksm.import_keys:main',
+            'yhsm-db-export = pyhsm.ksm.db_export:main [db]',
+            'yhsm-db-import = pyhsm.ksm.db_import:main [db]',
+            # validation server
+            'yhsm-validation-server = pyhsm.val.validation_server:main',
+            'yhsm-validate-otp = pyhsm.val.validate_otp:main',
+            'yhsm-init-oath-token = pyhsm.val.init_oath_token:main'
+        ]
+    },
     test_suite='test.test_init',
     tests_require=[],
     install_requires=[
         'pyserial >= 2.3',
-        'pycrypto >= 2.1',
-        'python-daemon',
-        'sqlalchemy >= 0.9.7'
+        'pycrypto >= 2.1'
     ],
+    extras_require={
+        'db': ['sqlalchemy>=0.9.7'],
+        'daemon': ['python-daemon']
+    },
     classifiers=[
         'License :: OSI Approved :: BSD License',
         'Operating System :: OS Independent',
